@@ -500,6 +500,7 @@ NS_EXTERN Ns_Entry *Ns_CacheFirstEntry(Ns_Cache *cache, Ns_CacheSearch *search);
 NS_EXTERN Ns_Entry *Ns_CacheNextEntry(Ns_CacheSearch *search);
 NS_EXTERN void Ns_CacheFlush(Ns_Cache *cache);
 NS_EXTERN void Ns_CacheLock(Ns_Cache *cache);
+NS_EXTERN int Ns_CacheTryLock(Ns_Cache *cache);
 NS_EXTERN void Ns_CacheUnlock(Ns_Cache *cache);
 NS_EXTERN int Ns_CacheTimedWait(Ns_Cache *cache, Ns_Time *timePtr);
 NS_EXTERN void Ns_CacheWait(Ns_Cache *cache);
